fixed: added overflow for profile

--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -3,13 +3,23 @@
   font-weight: normal;
   font-size: 18px;
   line-height: 22px;
+  text-overflow: ellipsis;
+  max-width: 400px;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 
+@media screen and (max-width: 1023px) {
+  .profile__description {
+    max-width: 300px;
+  }
+}
 @media screen and (max-width: 767px) {
   .profile__description {
     font-size: 14px;
     line-height: 17px;
     text-align: center;
+    max-width: 270px;
   }
 }
