--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -4,13 +4,24 @@
   font-size: 42px;
   line-height: 48px;
   margin: 0 18px 16px 0;
+  text-overflow: ellipsis;
+  max-width: 450px;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
+
+@media screen and (max-width: 1023px) {
+  .profile__name {
+    max-width: 300px;
+  }
+}
 @media screen and (max-width: 767px) {
   .profile__name {
     font-size: 27px;
     line-height: 33px;
     text-align: center;
     margin: 0 10px 14px 0;
+    max-width: 250px;
   }
 }
